# Proyecto1-OMP

./: CMakeLists.txt  README.md  main.c
